# Spend-Note

./: .gitignore  README.md  database draw.txt
Examples/LoggerSkeleton/: CMakeLists.txt  LoggerSkeleton.cpp  LoggerSkeleton.h  main.cpp  module2.h
src/: CMakeLists.txt  Exception.h  Spend-NoteConfig.h  Spend-NoteConfig.h.in
src/Client/: CMakeLists.txt  Common.h  Config.json  HTTPClient.cpp  HTTPClient.h  Test.cpp  Utils.cpp  Utils.h  en_US.ts  main.cpp  resources.qrc  uk_UA.ts
src/Client/Controller/: CMakeLists.txt  Controller.cpp  Controller.h  HTTPClient.cpp  HTTPClient.h  LoginPageController.cpp  LoginPageController.h  NavHistory.h  SignupPageController.cpp  SignupPageController.h
src/Client/Controller/MainPage/: CMakeLists.txt  DailyListPageController.cpp  DailyListPageController.h  DailyListPagesController.cpp  DailyListPagesController.h  IncomeCategoriesController.cpp  IncomeCategoriesController.h  IncomePagesController.cpp  IncomePagesController.cpp.autosave  IncomePagesController.h  IncomePagesController.h.autosave  ListCreatePageController.cpp  ListCreatePageController.h  ListPagesController.cpp  ListPagesController.h  MainPageController.cpp  MainPageController.cpp.autosave  MainPageController.h  NavHistory.cpp  ProductCategoriesController.cpp  ProductCategoriesController.h  ProductPagesController.cpp  ProductPagesController.h  ProductRecommendationController.cpp  ProductRecommendationController.h  SettingsPageController.cpp  SettingsPageController.h  StatisticsPageController.cpp  StatisticsPageController.h
src/Client/DTO/: CMakeLists.txt  Income.h  IncomeCategory.h  IncomeId.h  List.h  Login.h  Product.h  ProductCategory.h  ProductId.h
src/Client/Entities/: CMakeLists.txt  Entities.h  Formatters.h  PageData.h  Parsers.h
src/Client/Models/: AddVerificationModel.cpp  AddVerificationModel.h  CMakeLists.txt  CheckVerificationModel.cpp  CheckVerificationModel.h  ListsModel.cpp  ListsModel.h  LoginModel.cpp  LoginModel.h  SignupModel.cpp  SignupModel.h  VerificationModel.cpp  VerificationModel.h
src/Client/View/: CMakeLists.txt  Constants.h  MainWindow.cpp  MainWindow.h  MainWindow.ui
src/Client/Views/: AuthorizedWindow.cpp  AuthorizedWindow.h  AuthorizedWindow.ui  Constants.h  LoginWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  SignupWindow.ui
src/Examples/LoggerSkeleton/: MessageHandler.cpp  module1.cpp  module2.cpp
src/Logger/: CMakeLists.txt  Logger.cpp  Logger.h  ScopedLogger.cpp  ScopedLogger.h
src/Net/: CMakeLists.txt  Constants.cpp  Constants.h  Message.h  Parsing.cpp  Parsing.h  Types.h
src/Net/Entities/: CMakeLists.txt  List.h  ListId.h  ListState.h  Product.h  ProductCategory.h  ProductId.h
src/Net/Tools/: CMakeLists.txt
src/Server/: CMakeCache.txt  CMakeLists.txt  ClientError.h  ConfigManager.cpp  ConfigManager.h  DbConnectionHelper.cpp  DbConnectionHelper.h  Error.h  HTTPRequestHandler.cpp  HTTPRequestHandler.h  HandlerFactory.cpp  HandlerFactory.h  Params.cpp  Params.h  Server.cpp  Server.h  SpendNoteServer_Config.h  SpendNoteServer_Config.h.in  Utils.cpp  Utils.h
src/Server/Handlers/: AddIncomeHandler.cpp  AddIncomeHandler.h  AuthorizedHandler.cpp  AuthorizedHandler.h  CMakeLists.txt  ChangeProductHandler.cpp  ChangeProductHandler.h  Common.cpp  Common.h  EchoHandler.cpp  EchoHandler.h  FakeGetListsHandler.cpp  FakeGetListsHandler.h  FakeLoginHandler.cpp  FakeLoginHandler.h  GetListsHandler.cpp  GetListsHandler.h  GetProductsHandler.cpp  GetProductsHandler.h  ICommandHandler.cpp  ICommandHandler.h  LoginHandler.cpp  LoginHandler.h  MethodNotAllowedHandler.cpp  MethodNotAllowedHandler.h  SignupHandler.cpp  SignupHandler.h
src/Server/Resolvers/: CMakeLists.txt  ISubDomainResolver.h  IncomeCategoriesResolver.cpp  IncomeCategoriesResolver.h  IncomesResolver.cpp  IncomesResolver.h  ListsResolver.cpp  ListsResolver.h  PeriodicIncomesResolver.cpp  PeriodicIncomesResolver.h  PeriodicProductsResolver.cpp  PeriodicProductsResolver.h  ProductCategoriesResolver.cpp  ProductCategoriesResolver.h  ProductsResolver.cpp  ProductsResolver.h  RootResolver.cpp  RootResolver.h  UsersResolver.cpp  UsersResolver.h  Utils.cpp  Utils.h
src/Server/Tests/: AddIncomeHandler.cpp  AddIncomeHandlerTest.cpp  AddIncomeHandlerTests.cpp  AddProductHandlerTests.cpp  CMakeLists.txt  GetIncomesHandlerTests.cpp  GetListsHandlerTests.cpp  GetProductsHandler.cpp  GetProductsHandlerTests.cpp  IncomeIdJSONParserTests.cpp  IncomeJSONFormatterTest.cpp  IncomeJSONParserTest.cpp  IncomesJSONParserTests.cpp  ListIdJSONFormatterTest.cpp  ListIdJSONParserTest.cpp  ListJSONFormatterTest.cpp  ListJSONParserTest.cpp  ListsJSONFormatterTest.cpp  ListsJSONParserTest.cpp  LoginTests.cpp  MockDbFacade.h  ProductJSONFormatterTest.cpp  ProductJSONParserTest.cpp  ProductsJSONFormatterTest.cpp  ProductsJSONParserTest.cpp  RemoveProductHandler.cpp  RemoveProductHandlerTests.cpp  SignupTests.cpp  UpdateListHandlerTests.cpp  UpdateProductHandlerTest.cpp  Utils.cpp  Utils.h  main.cpp
src/Server/libdal/: CMakeLists.txt  DatabaseNames.h  Types.h  dbfacade.cpp  dbfacade.h  idbfacade.h  main.cpp
src/build-Client-Desktop_Qt_6_2_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
src/build-Client-Desktop_Qt_6_2_2_GCC_64bit-Debug/Controller/: cmake_install.cmake
src/build-Client-Desktop_Qt_6_2_2_GCC_64bit-Debug/DTO/: cmake_install.cmake
src/build-Client-Desktop_Qt_6_2_2_GCC_64bit-Debug/Models/: cmake_install.cmake
src/build-Client-Desktop_Qt_6_2_2_GCC_64bit-Debug/Spend-Note-Client_autogen/: deps  mocs_compilation.cpp
src/build-Client-Desktop_Qt_6_2_2_GCC_64bit-Debug/View/: cmake_install.cmake
src/build-Server-Desktop_Qt_6_2_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
src/build-Server-Desktop_Qt_6_2_2_GCC_64bit-Debug/Handlers/: cmake_install.cmake
src/build-Server-Desktop_Qt_6_2_2_GCC_64bit-Debug/Net/: cmake_install.cmake
src/build-Server-Desktop_Qt_6_2_2_GCC_64bit-Debug/Tests/: cmake_install.cmake
src/build-Server-Desktop_Qt_6_2_2_GCC_64bit-Debug/libdal/: cmake_install.cmake
(+889 files in other folders)
