add_subdirectory(IncomesSubPage)
add_subdirectory(IncomeCreateSubPage)
add_subdirectory(PeriodicIncomeCreateSubPage)
add_subdirectory(IncomeEditSubPage)
add_subdirectory(PeriodicIncomeEditSubPage)
add_subdirectory(IncomeViewSubPage)
add_subdirectory(PeriodicIncomeViewSubPage)

set(Spend-Note-Client_SOURCES "${Spend-Note-Client_SOURCES}" PARENT_SCOPE)
