add_subdirectory(ProductsSubPage)
add_subdirectory(ProductCreateSubPage)
add_subdirectory(PeriodicProductCreateSubPage)
add_subdirectory(ProductViewSubPage)
add_subdirectory(PeriodicProductViewSubPage)
add_subdirectory(ProductEditSubPage)
add_subdirectory(PeriodicProductEditSubPage)


set(Spend-Note-Client_SOURCES "${Spend-Note-Client_SOURCES}" PARENT_SCOPE)
